--- a/primeiro_teste.html
+++ b/primeiro_teste.html
@@ -1,3 +1,9 @@
-meu primeiro teste!
 
-seria isso um programa?
+<meta charset="utf-8">
+<h1>meu primeiro teste!</h1>
+
+seria isso um programa? Desculpa visitando o alura <a href="http://www.alura.com.br">aqui</a>
+
+<script type="text/javascript">
+alert("Isso sim é um programa");
+</script>
