--- a/primeiro_teste.html
+++ b/primeiro_teste.html
@@ -5,5 +5,5 @@
 seria isso um programa? Desculpa visitando o alura <a href="http://www.alura.com.br">aqui</a>
 
 <script type="text/javascript">
-alert("Isso sim é um programa");
+alert("Isso sim é um programa";
 </script>
