--- a/programa.html
+++ b/programa.html
@@ -1,6 +1,33 @@
 <meta charset="UTF-8">
+
 <script type="text/javascript">
 	
-  alert("A idade do flavio é");
+document.write("A idade do Flávio é");
+document.write(2016 - 39);
+document.write("<br>");
+document.write("Flávio nasceu em " + (2016 - 39));
+document.write("<br>");
+document.write("Joaquim nasceu em " + (2016 - 20));
+document.write("<br>");
+document.write("Barney nasceu em " + (2016 - 40));
+document.write("<br>");
+document.write("Estou escrevendo do mundo JavaScript no mundo HTML <br>" );
+document.write(10 + 20);
+document.write("<h1>Seja bem-vindo</h1>");
+document.write(200 + 100 + 300 + 400/4 );
+document.write("<br>");
+document.write( (200 + 100 + 300 + 400) / 4);
+document.write("<br>");
+document.write( (200 + 100 + 300 + 400) / 4);
+document.write("<br>");
+document.write("Eu acertei: " + 15/50*100 + "%" );
+
+    document.write("Flávio nasceu em " + (2016 - 39));
+    document.write("<br>");
+    document.write("Joaquim nasceu em " + (2016 - 20));
+    document.write("<br>");
+    document.write("Barney nasceu em " + (2016 - 40));
+
+
 
 </script>
