continuação da aula

--- a/programa.html
+++ b/programa.html
@@ -21,13 +21,16 @@ document.write("<br>");
 document.write( (200 + 100 + 300 + 400) / 4);
 document.write("<br>");
 document.write("Eu acertei: " + 15/50*100 + "%" );
-
-    document.write("Flávio nasceu em " + (2016 - 39));
-    document.write("<br>");
-    document.write("Joaquim nasceu em " + (2016 - 20));
-    document.write("<br>");
-    document.write("Barney nasceu em " + (2016 - 40));
-
+document.write("<br>");
+document.write("Flávio nasceu em " + (2016 - 39));
+document.write("<br>");
+document.write("Joaquim nasceu em " + (2016 - 20));
+document.write("<br>");
+document.write("Barney nasceu em " + (2016 - 40));
+document.write("<br>");
+var n = 3;
+document.write("O resultado da fórmula é : " + n * (10 / 20)  );
+document.write("<br>");
 
 
 </script>
