enviando codigos de aulas

--- a/programa.html
+++ b/programa.html
@@ -31,6 +31,222 @@ document.write("<br>");
 var n = 3;
 document.write("O resultado da fórmula é : " + n * (10 / 20)  );
 document.write("<br>");
+  var tabuada = 8;
+    document.write(tabuada + " vezes 1 é " + tabuada * 1 + "<br>");
+    document.write(tabuada + " vezes 2 é " + tabuada * 2 + "<br>");
+    document.write(tabuada + " vezes 3 é " + tabuada * 3 + "<br>");
+    document.write(tabuada + " vezes 4 é " + tabuada * 4 + "<br>");
+    document.write(tabuada + " vezes 5 é " + tabuada * 5 + "<br>");
+    document.write(tabuada + " vezes 6 é " + tabuada * 6 + "<br>");
+    document.write(tabuada + " vezes 7 é " + tabuada * 7 + "<br>");
+    document.write(tabuada + " vezes 8 é " + tabuada * 8 + "<br>");
+    document.write(tabuada + " vezes 9 é " + tabuada * 9 + "<br>");
+    document.write(tabuada + " vezes 10 é " + tabuada * 10 + "<br>");
+
+    var ano = 2016;
+
+    document.write("Flávio tem " + (ano - 1977) + " anos");
+    document.write("<br>");
+    document.write("Joaquim tem " + (ano - 1996) + " anos");
+    document.write("<br>");
+
+    ano = 2017;
+    document.write("Barney tem " + (ano - 1976) + " anos");
+    document.write("<br>");
+
+    document.write('A média das idades é  ' + (39 + 20 + 41)/3);
+    var media = (39 + 20 + 41)/3;
+    document.write("<br>");
+    document.write('A média das idades é ' + Math.round(media));
+    var idadeFlavio = 39;
+    var idadeJoaquim = 20;
+    var idadeBarney = 41;
+    var media = (idadeFlavio + idadeJoaquim + idadeBarney)/3;
+
+    document.write('A média das idades é ' + Math.round(media));
+
+    var ano = 2016;
+
+    document.write("Flávio tem " + (ano - 1977) + " anos");
+    document.write("<br>");
+    document.write("Joaquim tem " + (ano - 1996) + " anos");
+    document.write("<br>");
+
+    ano = 2017;
+    document.write("Barney tem " + (ano - 1976) + " anos");
+    document.write("<br>");
+
+        var idadeFlavio = 39;
+        var idadeJoaquim = 20;
+        var idadeBarney = 41;
+
+        var media = (idadeFlavio + idadeJoaquim + idadeBarney)/3;
+        document.write("<br>");
 
 
+        document.write("A média das idades é " + Math.round(media));
+
+        var nome = "Flávio";
+
+        document.write("<br>");
+        document.write("A idade de " + nome + " é " + idadeFlavio);
+        var IDADE1 = 10;
+
+        
+        document.write("<br>");
+        document.write("<br>");
+        document.write("--------------------------");
+
+
+        var IDADE2 = "20";
+        var IDADE3 = 12;
+        document.write("A média das idades é <br>");
+        document.write( (IDADE1 + IDADE2 + IDADE3) / 3);
+        document.write("<br>");
+                 
+        var tanque = 40;
+
+        var caminhoComGasolina = 480;
+        var consumoDeGasolina = caminhoComGasolina/tanque;
+
+        var caminhoComAlcool = 300;
+		var consumoDeAlcool = caminhoComAlcool/tanque;
+		        document.write("<br>");
+
+
+		document.write("O consumo de Gasolina é " + consumoDeGasolina + " km/L");
+
+		document.write("<br>");
+
+		document.write("O consumo de Álcool é " + consumoDeAlcool + " km/L");
+
+		    function pulaLinha() {
+
+		    document.write("<br>");
+		    document.write("<br>");
+		        }
+
+		    function mostra(frase){
+
+		    document.write(frase);
+		        }
+
+		    mostra("Olá pessoal!");
+		    document.write("<br>");
+
+
+		    var ano = 2016;
+
+		    mostra("Flávio tem " + (ano - 1977) + " anos");
+
+		    pulaLinha();
+
+		    mostra("Joaquim tem " + (ano - 1996) + " anos");
+
+		    pulaLinha();
+
+		    ano = 2017;
+
+		    mostra("Barney tem " + (ano - 1976) + " anos");
+		     /*function fazPegadinha() {
+        alert("Olá");
+        alert("amiga!");
+        alert("Tá");
+        alert("bastante");
+        alert("entediada?");
+        alert("Em ficar");
+        alert("Clicando em");
+        alert("Ok");
+        alert("né?");
+    }
+
+	    fazPegadinha();
+	    fazPegadinha();
+	    function pulaLinha() {
+
+        document.write("<br>");
+    }*/
+
+    var titulo = "Bem-vindo ao meu programa!";
+
+    document.write("<h1>" + titulo + "</h1>");
+
+    pulaLinha();
+    pulaLinha();
+
+    document.write("Vocês não sabem o que tive que aprender para fazer isso!");
+
+    pulaLinha();
+    pulaLinha();
+
+    document.write("Contudo, assistindo os vídeos e estudando ...");
+
+    pulaLinha();
+    pulaLinha();
+
+    document.write("Eu vou mais longe!");
+
+    pulaLinha();
+    pulaLinha();
+    function exibeAlerta(mensagem) {
+        alert("***" + mensagem + "***");
+    }
+
+    var idade1 = 10;
+    var idade2 = 20;
+    var idade3 = 30;
+    var totalIdades = idade1 + idade2 + idade3;
+    var mediaIdades = totalIdades/3;
+
+    exibeAlerta("Total de idades é " + totalIdades);
+    exibeAlerta("A média das idades é " +  mediaIdades);
+
+
+     function pulaLinha() {
+
+        document.write("<br>");
+    }
+
+    function mostra(frase) {
+
+        document.write("**************************************************");
+        pulaLinha();
+        document.write(frase);
+    }
+
+    mostra("BEM-VINDO AO MEU PROGRAMA");
+    mostra("ELE REALMENTE FUNCIONA");
+    mostra("EU USEI FUNÇÃO PARA FAZER ISSO");
+
+     function pulaLinha() {
+        document.write("<br>");
+    }
+
+    function exibeTitulo(titulo) {
+        document.write("<h1>" + titulo + "</h1>");
+        pulaLinha();
+    }
+
+    function exibeParagrafo(paragrafo) {
+        document.write("<p>" + paragrafo + "</p>");
+        pulaLinha();
+    }
+
+    // pede para alguém ler daqui em diante e veja se ele entende o que esta sendo feito
+    exibeTitulo("Bem-vindos");
+    exibeParagrafo("Este é um simples programa");
+
+       function pulaLinha() {
+        document.write("<br>");
+    }
+
+    function mostra(frase) {
+        document.write(frase);
+    }
+
+    var minhaIdade = 18;
+    var idadeIrmao = 15;
+
+    mostra("Nossa diferença de idade é " + (minhaIdade - idadeIrmao));
+    pulaLinha();
 </script>
