--- a/imc.html
+++ b/imc.html
@@ -13,7 +13,7 @@
 
    function calculaImc (altura, peso){
    	var imc = peso /(altura*altura);
-   	mostra("O imc cakculado é " + imc);
+   	mostra("O imc calculado é " + imc);
    }
 
    calculaImc(1.71,73);
