--- a/exIMC.html
+++ b/exIMC.html
@@ -11,10 +11,21 @@
 
     function calculaImc(altura, peso) {
 
-        var imc = peso / (altura * altura);
-        return imc;
-    }
+        /*var imc = peso / (altura * altura);
+        return imc;*/
+        return peso/(altura*altura);
+       }
 
+      
     var imcCalculado = calculaImc(1.77, 75);
     mostra("O meu IMC é : " + imcCalculado);
+
+    var imcFlavio = calculaImc(1.71,73);
+    var imcAmigo = calculaImc(1.72,68);
+    var totalImc = imcFlavio + imcAmigo;
+
+    document.write("A soma dos IMC´s é + " totalImc);
+
+
+
 </script>
